doctor alignment issue fixed.

--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -716,6 +716,9 @@ li.admin {
       height: 45px;
       line-height: normal;
     }
+    .name{
+      height: 20px;
+    }
     a {
       color: #555555;
       text-transform: capitalize;
